[package]
name = "desktop_benchmark"
version = "0.1.0"
edition = "2021"
authors = ["Markus Elias Gerber <markus.gerber@fau.de>"]
license = "GPL-3.0-or-later"

[dependencies]
env_logger = "0.10.2"
log = { version = "0.4.21", features = [ "max_level_trace", "release_max_level_warn" ] }
seq-macro = "0.3.5"
vnv_heap = { path = "../../vnv_heap", features = ["benchmarks"] }